10/10/2005: v1.9.2
	- fixed some minor bugs
	- updated translations
	- added Spanish translation
	- switched from 'arj' to Gnu 'zip' in the Windows port
	- added player streaks (hot/cold)
	- added definition for the Netherlands (thanks to Zwakstroom)
	- added definition for the World Cup 2006 Germany
	- minor definition system improvements
	- window geometry can be saved
	

09/10/2005: v1.9.1
	- updated German and Dutch translations
	- added Polish (complete), French (almost complete), Romanian
	  (a.c.) and Bulgarian (a.c.) translations
	- added i18n support for the binary package
	- transfer offers are remembered
	- added sponsorship money
	- fixed some minor bugs
	- improved live game commentary (moved to XML files, added
	  conditions etc.)
	- added country definitions for Australia, Bulgaria, Victoria
	  (Australia), Spain and Serbia&Montenegro
	- added youth academy
	- added experimental Windows port (thanks to Simon Binns)
	- improved definition system
	- added memorable matches feature
	
06/18/2005: v1.9.0
	- complete rewriting of the game, too many changes to count them
	and keep them in mind. among the most important ones are:
	- real interactive live game
	- hotseat multiplayer
	- extremely flexible and customizable country definitions
	- country-specific player names
	- constants determining game behaviour are loaded from a text file
	making it easy to change and fine-tune the game

06/18/2005: v1.8.2
	- corrected a bug in the update script
	- fixed the job offer bug
	- added some more keyboard shortcuts
	- corrected a 'ghost-player'-bug after a transfer

01/30/2005: v1.8.1
	- added Dutch translation and country file for Belgium (thanks to
	ATD)
	- fixed a bug that prevented loading of custom country files
	- fixed a season objective bug
	- fixed a floating point bug (thanks to Ken Brush)

01/30/2005: v1.8.0 (changes compared to 1.6.3)
	- added a lot of new and fine icons (thanks to Vector)
	- added GeoVah's season objective patch (thanks, GeoVah)