@@ -244,7 +244,9 @@ game_gui_set_main_window_header(void)
 
     game_gui_write_radio_items();
 
-    game_gui_write_meters();
+    game_gui_write_meters(GTK_IMAGE(lookup_widget(window.main, "image_style")),
+			  GTK_IMAGE(lookup_widget(window.main, "image_boost")),
+			  current_user.tm);
 
     game_gui_write_check_items();
 }
@@ -263,13 +265,12 @@ game_gui_write_av_skills(void)
     gtk_label_set_text(label_av_skills, buf);
 }
 
-/** Set the appropriate images for the style and boost meters. */
+/** Set the images for the style and boost meters to the appropriate values
+    from the team settings. */
 void
-game_gui_write_meters(void)
+game_gui_write_meters(GtkImage *image_style, GtkImage *image_boost, const Team *tm)
 {
     gint i;
-    GtkImage *image_style = GTK_IMAGE(lookup_widget(window.main, "image_style")),
-	*image_boost = GTK_IMAGE(lookup_widget(window.main, "image_boost"));
     gchar *image_style_files[5] = 
 	{file_find_support_file(const_app("string_game_gui_style_all_out_defend_icon"), TRUE),
 	 file_find_support_file(const_app("string_game_gui_style_defend_icon"), TRUE),
@@ -281,8 +282,8 @@ game_gui_write_meters(void)
 	 file_find_support_file(const_app("string_game_gui_boost_off_icon"), TRUE),
 	 file_find_support_file(const_app("string_game_gui_boost_on_icon"), TRUE)};
 
-    gtk_image_set_from_file(image_style, image_style_files[current_user.tm->style + 2]);
-    gtk_image_set_from_file(image_boost, image_boost_files[current_user.tm->boost + 1]);
+    gtk_image_set_from_file(image_style, image_style_files[tm->style + 2]);
+    gtk_image_set_from_file(image_boost, image_boost_files[tm->boost + 1]);
 
     for(i=0;i<5;i++)
 	g_free(image_style_files[i]);
@@ -387,7 +388,9 @@ game_gui_read_radio_items(GtkWidget *widget)
        old_yc != current_user.youth_academy.coach)
 	game_gui_print_message(_("Next week you'll fire him and hire a new one."));
 
-    game_gui_write_meters();
+    game_gui_write_meters(GTK_IMAGE(lookup_widget(window.main, "image_style")),
+			  GTK_IMAGE(lookup_widget(window.main, "image_boost")),
+			  current_user.tm);
     game_gui_write_radio_items();
 
     treeview_show_next_opponent();
