@@ -14,7 +14,7 @@ string_contrib_title Patches and ideas
 string_contrib_entry Mark Calderbank, Michal Rudolf
 
 string_contrib_title Country definitions
-string_contrib_entry Győző Both (Australia, Germany, Italy, Scotland, USA)
+string_contrib_entry Győző Both (Australia, Germany, Italy, Scotland, USA, WC2006)
 string_contrib_entry Mark Calderbank (Bulgaria, England, Ireland, Spain, Victoria, Wales)
 string_contrib_entry Tobe &amp; Arne Deprez (Belgium)
 string_contrib_entry Celso Goya (Brazil)
@@ -27,8 +27,11 @@ string_contrib_title Translations
 string_contrib_entry Alexandre Beraud (French)
 string_contrib_entry Győző Both (German)
 string_contrib_entry Tobe &amp; Arne Deprez (Dutch)
+string_contrib_entry Marcelo Garrone (Spanish)
+string_contrib_entry Benyuan Liu (Chinese)
+string_contrib_entry Rostislav "zbrox" Raykov (Bulgarian)
 string_contrib_entry Michal Rudolf (Polish)
 string_contrib_entry Cristian Spoiala (Romanian)
-string_contrib_entry Rostislav "zbrox" Raykov (Bulgarian)
+
 
 string_contrib_title Forgotten anyone? Write me! (gyboth@bygfoot.com)
